50% of the header has been completed using css grid

--- a/index.html
+++ b/index.html
@@ -10,37 +10,45 @@
     <div class="container">
       <div class="header section">
         <div class="header-top">
-          <div>
-            <img
-              src="../../images/magnify.svg"
-              class="header-images"
-              alt="search icon"
-            />
+          <div class="search-bar">
+            <div>
+              <img
+                src="../../images/magnify.svg"
+                class="header-images search"
+                alt="search icon"
+              />
+            </div>
+            <div><input class="input" /></div>
           </div>
-          <div><input /></div>
-          <div>
-            <img
-              src="../../images/bell.svg"
-              class="header-images"
-              alt="notification icon"
-            />
+          <div class="username-bar">
+            <div>
+              <img
+                src="../../images/bell.svg"
+                class="header-images notis"
+                alt="notification icon"
+              />
+            </div>
+            <div>
+              <img
+                src="../../images/alpha-r-box-outline.svg"
+                class="header-images username-icon"
+                alt="username icon"
+              />
+            </div>
+            <div><p class="username">Rome</p></div>
           </div>
-          <div>
-            <img
-              src="../../images/alpha-r-box-outline.svg"
-              class="header-images"
-              alt="username icon"
-            />
-          </div>
-          <div><p>Welcome, Rome</p></div>
         </div>
         <div class="header-bottom">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div>
+            <div><img /></div>
+            <div>Hi there,</div>
+            <div>Rome (@0xRome)</div>
+          </div>
+          <div>
+            <div>New</div>
+            <div>Upload</div>
+            <div>Share</div>
+          </div>
         </div>
       </div>
       <div class="sidebar section">
