header section have been 90% completed using css grid content/main is in progress

--- a/index.html
+++ b/index.html
@@ -39,15 +39,24 @@
           </div>
         </div>
         <div class="header-bottom">
-          <div>
-            <div><img /></div>
-            <div>Hi there,</div>
-            <div>Rome (@0xRome)</div>
+          <div class="welcome">
+            <div>
+              <img
+                src="../../images/alpha-r-box-outline.svg"
+                class="header-images username-image"
+                alt="username icon"
+              />
+            </div>
+            <div class="welcome-text">
+              <div class="text">Hi there,</div>
+              <div class="text">Rome (@0xRome)</div>
+            </div>
           </div>
-          <div>
-            <div>New</div>
-            <div>Upload</div>
-            <div>Share</div>
+
+          <div class="create-bar">
+            <button type="button" class="create-buttons">New</button>
+            <button type="button" class="create-buttons">Upload</button>
+            <button type="button" class="create-buttons">Share</button>
           </div>
         </div>
       </div>
@@ -138,7 +147,16 @@
           </div>
         </div>
       </div>
-      <div class="main section">3</div>
+      <div class="main section">
+        <div class="seperator-line"></div>
+        <div class="box-1">
+          <p>projects</p>
+          <p>announcements</p>
+        </div>
+        <div class="box-2">2</div>
+        <div class="box-3">3</div>
+        <div class="box-4">4</div>
+      </div>
     </div>
   </body>
 </html>
