main content section completed anouncement and treanding section completed using css grid

--- a/index.html
+++ b/index.html
@@ -150,12 +150,270 @@
       <div class="main section">
         <div class="seperator-line"></div>
         <div class="box-1">
-          <p>projects</p>
-          <p>announcements</p>
+          <p>Projects</p>
         </div>
-        <div class="box-2">2</div>
-        <div class="box-3">3</div>
-        <div class="box-4">4</div>
+        <div class="box-0">
+          <p>Announcements</p>
+        </div>
+        <div class="box-2">
+          <div class="contentbox cb-1">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Super Cool Project</p>
+              <p class="content-body">
+                Lillo distinctio sed soluta ut incidunt, doloribus aliquam
+                voluptate pariatur consequuntur dolorem, delectus hic
+                reprehenderit dolores blanditiis! Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Reiciendis quo animi sint
+                veritatis, voluptates quos voluptatum iure similique dolores
+                placeat excepturi? Numquam quam excepturi culpa suscipit tempore
+                alias et tempora. Lorem ipsum, dolor sit amet consectetur
+                adipisicing elit. Harum iure qui dolorem perspiciatis, aut
+                voluptas fuga, vel ratione alias asperiores voluptatum error
+                sapiente voluptatibus debitis temporibus itaque provident rerum
+                unde?
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contentbox cb-2">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Less Cool Project</p>
+              <p class="content-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+                est ducimus tempore excepturi iste necessitatibus accusantium
+                accusamus assumenda placeat soluta possimus libero deleniti
+                fugit, hic aut consequuntur. Vel, consequuntur omnis.
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contentbox cb-3">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Impossible App</p>
+              <p class="content-body">
+                Sit amet consectetur adipisicing elit. Ipsa quis quo similique
+                harum quaerat magnam quidem nesciunt voluptates rem fuga vitae a
+                totam odio aspernatur adipisci, voluptatum accusantium nam
+                animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Animi dicta eos ullam repellendus neque perferendis eius
+                veritatis veniam ad sapiente. Corporis quas voluptate veritatis
+                eos fugiat dolor hic culpa repellendus.
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contentbox cb-4">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Easy Peasy App</p>
+              <p class="content-body">
+                Numquam quam excepturi culpa suscipit tempore alias et tempora.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contentbox cb-5">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Ad Blocker</p>
+              <p class="content-body">
+                Voluptates quos voluptatum iure similique dolores placeat
+                excepturi? Numquam quam excepturi culpa suscipit tempore alias
+                et tempora. Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Harum iure qui dolorem perspiciatis, aut voluptas fuga,
+                vel ratione alias asperiores voluptatum error sapiente
+                voluptatibus debitis temporibus itaque provident rerum unde?
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="contentbox cb-6">
+            <div class="vertical-line"></div>
+            <div class="content-container">
+              <p class="content-heading">Money Maker</p>
+              <p class="content-body">
+                Harum iure qui dolorem perspiciatis, aut voluptas fuga, vel
+                ratione alias asperiores voluptatum error sapiente voluptatibus
+                debitis temporibus itaque provident rerum unde? Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Vitae molestias
+                doloremque enim ab dolorem, iusto sunt perspiciatis eligendi
+                quasi temporibus. Reiciendis itaque libero magni. Nam at
+                pariatur fuga nesciunt! Vel.
+              </p>
+              <div class="content-icons">
+                <div>
+                  <img
+                    src="../../images/thumb-up.svg"
+                    class="content-images"
+                    alt="thumb-up icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/bookmark.svg"
+                    class="content-images"
+                    alt="bookmark icon"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../../images/share.svg"
+                    class="content-images"
+                    alt="share icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box-3">
+          <div class="ann-box">
+            <div class="anns">
+              <p class="anns-heading">Site Maintenance</p>
+              <p class="anns-body">Numquam quam excepturi culpa suscipit</p>
+            </div>
+            <div class="anns">
+              <p class="anns-heading">Policy Change</p>
+              <p class="anns-body">Lorem ipsum, dolor sit amet consectetur.</p>
+            </div>
+            <div class="anns">
+              <p class="anns-heading">Community day</p>
+              <p class="anns-body">Et tempora lorem ipsum, dolor sit amet.</p>
+            </div>
+          </div>
+          <div class="trending-box">
+            <p>Trending</p>
+            <div class="trends">
+              <p class="trends-heading">@Pepethefrog69</p>
+              <p class="trends-body">Numquam quam excepturi culpa suscipit</p>
+            </div>
+            <div class="trends">
+              <p class="trends-heading">WorldWarOrganisation</p>
+              <p class="trends-body">
+                Lorem ipsum, dolor sit amet consectetur.
+              </p>
+            </div>
+            <div class="trends">
+              <p class="trends-heading">Christiano Messi</p>
+              <p class="trends-body">Et tempora lorem ipsum, dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+        <div class="box-4"></div>
       </div>
     </div>
   </body>
