debugged the image relocation in the code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="search-bar">
             <div>
               <img
-                src="../../images/magnify.svg"
+                src="images/images/magnify.svg"
                 class="header-images search"
                 alt="search icon"
               />
@@ -23,14 +23,14 @@
           <div class="username-bar">
             <div>
               <img
-                src="../../images/bell.svg"
+                src="images/images/bell.svg"
                 class="header-images notis"
                 alt="notification icon"
               />
             </div>
             <div>
               <img
-                src="../../images/alpha-r-box-outline.svg"
+                src="images/images/alpha-r-box-outline.svg"
                 class="header-images username-icon"
                 alt="username icon"
               />
@@ -42,7 +42,7 @@
           <div class="welcome">
             <div>
               <img
-                src="../../images/alpha-r-box-outline.svg"
+                src="images/images/alpha-r-box-outline.svg"
                 class="header-images username-image"
                 alt="username icon"
               />
@@ -63,7 +63,7 @@
       <div class="sidebar section">
         <div class="sidebar-header-links dashboard">
           <img
-            src="../../images/alpha-d-box.svg"
+            src="images/images/alpha-d-box.svg"
             class="sidebar-images"
             id="dashboard-image"
             alt="dashboard icon"
@@ -73,7 +73,7 @@
         <div class="sidebar-links-container">
           <div class="sidebar-links home">
             <img
-              src="../../images/home-account.svg"
+              src="images/images/home-account.svg"
               class="sidebar-images"
               alt="homepage icon"
             />
@@ -81,7 +81,7 @@
           </div>
           <div class="sidebar-links profile">
             <img
-              src="../../images/account.svg"
+              src="images/images/account.svg"
               class="sidebar-images"
               alt="profile icon"
             />
@@ -89,7 +89,7 @@
           </div>
           <div class="sidebar-links messages">
             <img
-              src="../../images/message.svg"
+              src="images/images/message.svg"
               class="sidebar-images"
               alt="messages icon"
             />
@@ -97,7 +97,7 @@
           </div>
           <div class="sidebar-links history">
             <img
-              src="../../images/history.svg"
+              src="images/images/history.svg"
               class="sidebar-images"
               alt="history icon"
             />
@@ -105,7 +105,7 @@
           </div>
           <div class="sidebar-links tasks">
             <img
-              src="../../images/file.svg"
+              src="images/images/file.svg"
               class="sidebar-images"
               alt="tasks icon"
             />
@@ -113,7 +113,7 @@
           </div>
           <div class="sidebar-links communities">
             <img
-              src="../../images/account-group.svg"
+              src="images/images/account-group.svg"
               class="sidebar-images"
               alt="communities icon"
             />
@@ -123,7 +123,7 @@
         <div class="sidebar-footer-links">
           <div class="sidebar-links settings">
             <img
-              src="../../images/cogs.svg"
+              src="images/images/cogs.svg"
               class="sidebar-images"
               alt="settings icon"
             />
@@ -131,7 +131,7 @@
           </div>
           <div class="sidebar-links support">
             <img
-              src="../../images/help.svg"
+              src="images/images/help.svg"
               class="sidebar-images"
               alt="support icon"
             />
@@ -139,7 +139,7 @@
           </div>
           <div class="sidebar-links privacy">
             <img
-              src="../../images/security.svg"
+              src="images/images/security.svg"
               class="sidebar-images"
               alt="privacy icon"
             />
@@ -176,21 +176,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
@@ -211,21 +211,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
@@ -249,21 +249,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
@@ -282,21 +282,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
@@ -319,21 +319,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
@@ -357,21 +357,21 @@
               <div class="content-icons">
                 <div>
                   <img
-                    src="../../images/thumb-up.svg"
+                    src="images/images/thumb-up.svg"
                     class="content-images"
                     alt="thumb-up icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/bookmark.svg"
+                    src="images/images/bookmark.svg"
                     class="content-images"
                     alt="bookmark icon"
                   />
                 </div>
                 <div>
                   <img
-                    src="../../images/share.svg"
+                    src="images/images/share.svg"
                     class="content-images"
                     alt="share icon"
                   />
